# hackathon

./: .doit.db  .gitignore  CMakeLists.txt  a.csv  conanfile.txt  dodo.py  env.sh  main.cpp  readme.txt  requirements.txt
datasets/3/: in.txt
datasets/4/: in.txt
datasets/5/: in1.txt  in2.txt  in3.txt
src/: CMakeLists.txt  InputParser.cpp  InputParser.hpp  LogicStateChange.cpp  LogicStateChange.hpp  LogicalStateChange.cpp  LogicalStateChange.hpp  StatesController.cpp  StatesController.hpp  main.cpp  statescontroller.cpp  statescontroller.h
test_ds1/: in.txt  out.csv
test_ds2/: in.txt  out.csv
ut/: CMakeLists.txt  test.cpp
